log
Fri 12 Aug 2022 01:14:49 PM UTC: 
 exercises.c | 9 ++++++++-
 1 file changed, 8 insertions(+), 1 deletion(-)
 tests:  1|6
total_score: 10/70
d3c770a
Fri 12 Aug 2022 01:20:24 PM UTC: 
 exercises.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  1|6
total_score: 10/70
935d56d
Fri 12 Aug 2022 01:25:22 PM UTC: 
 exercises.c | 10 ++++++----
 1 file changed, 6 insertions(+), 4 deletions(-)
In file included from test.c:5:
exercises.c: In function ‘sumaNultimos’:
exercises.c:48:17: error: ‘aux’ undeclared (first use in this function)
   48 |   *suma = sumaN(aux, m);
      |                 ^~~
exercises.c:48:17: note: each undeclared identifier is reported only once for each function it appears in
Compilation failed
e4e0d8c
Fri 12 Aug 2022 01:25:30 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
dd12643
Fri 12 Aug 2022 01:26:02 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
d17b93a
Fri 12 Aug 2022 01:27:22 PM UTC: 
 exercises.c | 5 ++---
 1 file changed, 2 insertions(+), 3 deletions(-)
 tests:  2|5
total_score: 20/70
a9d228d
Fri 12 Aug 2022 07:43:57 PM UTC: 
 exercises.c | 6 +++++-
 1 file changed, 5 insertions(+), 1 deletion(-)
In file included from test.c:5:
exercises.c: In function ‘crearPersona’:
exercises.c:67:3: error: expected ‘,’ or ‘;’ before ‘p’
   67 |   p->nombre = nombre[];
      |   ^
exercises.c:68:16: error: expected expression before ‘]’ token
   68 |   p->rut = rut[];
      |                ^
Compilation failed
d6c5a15
Fri 12 Aug 2022 07:44:10 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
exercises.c: In function ‘crearPersona’:
exercises.c:67:22: error: expected expression before ‘]’ token
   67 |   p->nombre = nombre[];
      |                      ^
exercises.c:68:16: error: expected expression before ‘]’ token
   68 |   p->rut = rut[];
      |                ^
Compilation failed
5f8c5e5
Fri 12 Aug 2022 07:44:19 PM UTC: 
 exercises.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
In file included from test.c:5:
exercises.c: In function ‘crearPersona’:
exercises.c:67:13: error: assignment to expression with array type
   67 |   p->nombre = nombre;
      |             ^
exercises.c:68:10: error: assignment to expression with array type
   68 |   p->rut = rut;
      |          ^
Compilation failed
84c66bd
Fri 12 Aug 2022 07:46:45 PM UTC: 
 exercises.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  3|4
total_score: 30/70
b850309
Fri 12 Aug 2022 07:49:47 PM UTC: 
 exercises.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  3|4
total_score: 30/70
191d96c
Fri 12 Aug 2022 07:50:17 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  3|4
total_score: 30/70
0e62723
Fri 12 Aug 2022 07:50:52 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
exercises.c: In function ‘crearVector’:
exercises.c:87:26: error: too few arguments to function ‘calloc’
   87 |   Vector * v = (Vector *)calloc(sizeof(Vector) * n);
      |                          ^~~~~~
In file included from test.c:2:
/nix/store/iwd8ic5hhwdxn5dga0im55g5hjl270cd-glibc-2.33-47-dev/include/stdlib.h:542:14: note: declared here
  542 | extern void *calloc (size_t __nmemb, size_t __size)
      |              ^~~~~~
Compilation failed
c8a7955
Fri 12 Aug 2022 07:54:15 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  3|4
total_score: 30/70
fb0ed98
Fri 12 Aug 2022 07:58:47 PM UTC: 
 exercises.c | 4 +++-
 1 file changed, 3 insertions(+), 1 deletion(-)
In file included from test.c:5:
exercises.c: In function ‘crearVector’:
exercises.c:88:43: error: expected ‘;’ before ‘v’
   88 |   v->datos = (int *)calloc(n, sizeof(int))
      |                                           ^
      |                                           ;
   89 |   v->capacidad = n;
      |   ~                                        
Compilation failed
fe2e43d
Fri 12 Aug 2022 07:59:00 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  4|3
total_score: 40/70
a0c93cb
Fri 12 Aug 2022 08:01:31 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
exercises.c: In function ‘asignarValor’:
exercises.c:99:10: error: incompatible types when assigning to type ‘Vector’ from type ‘int’
   99 |   v[i] = valor
      |          ^~~~~
exercises.c:99:15: error: expected ‘;’ before ‘}’ token
   99 |   v[i] = valor
      |               ^
      |               ;
  100 | }
      | ~              
Compilation failed
e61737c
Fri 12 Aug 2022 08:01:36 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
exercises.c: In function ‘asignarValor’:
exercises.c:99:10: error: incompatible types when assigning to type ‘Vector’ from type ‘int’
   99 |   v[i] = valor;
      |          ^~~~~
Compilation failed
feed699
Fri 12 Aug 2022 08:04:03 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  4|3
total_score: 40/70
eab01d4
